upped up to newest junit